src/OpenCV5Sharp.Native/opencv5sharp_native.h

extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_filterByArea_set(void* self, bool val);
extern "C" __declspec(dllexport) float SimpleBlobDetector_Params_minArea_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_minArea_set(void* self, float val);
extern "C" __declspec(dllexport) float SimpleBlobDetector_Params_maxArea_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_maxArea_set(void* self, float val);
extern "C" __declspec(dllexport) bool SimpleBlobDetector_Params_filterByCircularity_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_filterByCircularity_set(void* self, bool val);
extern "C" __declspec(dllexport) float SimpleBlobDetector_Params_minCircularity_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_minCircularity_set(void* self, float val);
extern "C" __declspec(dllexport) float SimpleBlobDetector_Params_maxCircularity_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_maxCircularity_set(void* self, float val);
extern "C" __declspec(dllexport) bool SimpleBlobDetector_Params_filterByInertia_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_filterByInertia_set(void* self, bool val);
extern "C" __declspec(dllexport) float SimpleBlobDetector_Params_minInertiaRatio_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_minInertiaRatio_set(void* self, float val);
extern "C" __declspec(dllexport) float SimpleBlobDetector_Params_maxInertiaRatio_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_maxInertiaRatio_set(void* self, float val);
extern "C" __declspec(dllexport) bool SimpleBlobDetector_Params_filterByConvexity_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_filterByConvexity_set(void* self, bool val);
extern "C" __declspec(dllexport) float SimpleBlobDetector_Params_minConvexity_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_minConvexity_set(void* self, float val);
extern "C" __declspec(dllexport) float SimpleBlobDetector_Params_maxConvexity_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_maxConvexity_set(void* self, float val);
extern "C" __declspec(dllexport) bool SimpleBlobDetector_Params_collectContours_get(void* self);
extern "C" __declspec(dllexport) void SimpleBlobDetector_Params_collectContours_set(void* self, bool val);
extern "C" __declspec(dllexport) void cv_goodFeaturesToTrack_0(void* image, void* corners, int maxCorners, double qualityLevel, double minDistance, void* mask, int blockSize, bool useHarrisDetector, double k);
extern "C" __declspec(dllexport) void cv_goodFeaturesToTrack_1(void* image, void* corners, int maxCorners, double qualityLevel, double minDistance, void* mask, int blockSize, int gradientSize, bool useHarrisDetector, double k);
extern "C" __declspec(dllexport) void cv_goodFeaturesToTrack_2(void* image, void* corners, int maxCorners, double qualityLevel, double minDistance, void* mask, void* cornersQuality, int blockSize, int gradientSize, bool useHarrisDetector, double k);
extern "C" __declspec(dllexport) void cv_drawKeypoints_0(void* image, void* keypoints, void* outImage, cv::Scalar color, int flags);
extern "C" __declspec(dllexport) void cv_drawMatches_0(void* img1, void* keypoints1, void* img2, void* keypoints2, void* matches1to2, void* outImg, cv::Scalar matchColor, cv::Scalar singlePointColor, void* matchesMask, int flags);
extern "C" __declspec(dllexport) void cv_drawMatches_1(void* img1, void* keypoints1, void* img2, void* keypoints2, void* matches1to2, void* outImg, int matchesThickness, cv::Scalar matchColor, cv::Scalar singlePointColor, void* matchesMask, int flags);