src/OpenCV5Sharp/Generated/NativeMethods.Features.cs

        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_filterByArea_set(SimpleBlobDetectorParamsHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float SimpleBlobDetector_Params_minArea_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_minArea_set(SimpleBlobDetectorParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float SimpleBlobDetector_Params_maxArea_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_maxArea_set(SimpleBlobDetectorParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool SimpleBlobDetector_Params_filterByCircularity_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_filterByCircularity_set(SimpleBlobDetectorParamsHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float SimpleBlobDetector_Params_minCircularity_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_minCircularity_set(SimpleBlobDetectorParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float SimpleBlobDetector_Params_maxCircularity_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_maxCircularity_set(SimpleBlobDetectorParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool SimpleBlobDetector_Params_filterByInertia_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_filterByInertia_set(SimpleBlobDetectorParamsHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float SimpleBlobDetector_Params_minInertiaRatio_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_minInertiaRatio_set(SimpleBlobDetectorParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float SimpleBlobDetector_Params_maxInertiaRatio_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_maxInertiaRatio_set(SimpleBlobDetectorParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool SimpleBlobDetector_Params_filterByConvexity_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_filterByConvexity_set(SimpleBlobDetectorParamsHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float SimpleBlobDetector_Params_minConvexity_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_minConvexity_set(SimpleBlobDetectorParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern float SimpleBlobDetector_Params_maxConvexity_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_maxConvexity_set(SimpleBlobDetectorParamsHandle self, float val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.U1)]
        public static extern bool SimpleBlobDetector_Params_collectContours_get(SimpleBlobDetectorParamsHandle self);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void SimpleBlobDetector_Params_collectContours_set(SimpleBlobDetectorParamsHandle self, [MarshalAs(UnmanagedType.U1)] bool val);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_goodFeaturesToTrack_0(MatHandle image, MatHandle corners, int maxCorners, double qualityLevel, double minDistance, IntPtr mask, int blockSize, [MarshalAs(UnmanagedType.U1)] bool useHarrisDetector, double k);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_goodFeaturesToTrack_1(MatHandle image, MatHandle corners, int maxCorners, double qualityLevel, double minDistance, MatHandle mask, int blockSize, int gradientSize, [MarshalAs(UnmanagedType.U1)] bool useHarrisDetector, double k);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_goodFeaturesToTrack_2(MatHandle image, MatHandle corners, int maxCorners, double qualityLevel, double minDistance, MatHandle mask, MatHandle cornersQuality, int blockSize, int gradientSize, [MarshalAs(UnmanagedType.U1)] bool useHarrisDetector, double k);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_drawKeypoints_0(MatHandle image, IntPtr keypoints, MatHandle outImage, Scalar color, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_drawMatches_0(MatHandle img1, IntPtr keypoints1, MatHandle img2, IntPtr keypoints2, IntPtr matches1to2, MatHandle outImg, Scalar matchColor, Scalar singlePointColor, IntPtr matchesMask, int flags);
        [DllImport("opencv5sharp_native", CallingConvention = CallingConvention.Cdecl)]
        public static extern void cv_drawMatches_1(MatHandle img1, IntPtr keypoints1, MatHandle img2, IntPtr keypoints2, IntPtr matches1to2, MatHandle outImg, int matchesThickness, Scalar matchColor, Scalar singlePointColor, IntPtr matchesMask, int flags);
    }
}
